--- a/themes/zolarwind/templates/partials/navigation.html
+++ b/themes/zolarwind/templates/partials/navigation.html
@@ -3,7 +3,7 @@
     <span>
       <a href="{{ paginator.previous }}">
         <span class="inline-flex rounded-md shadow-sm">
-          <span class="inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-blue active:bg-blue-700 transition ease-in-out duration-150">
+          <span class="inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-black bg-green0 hover:bg-green1 focus:outline-none focus:border-indigo-700 focus:shadow-outline-blue active:bg-green1 transition ease-in-out duration-150">
            {{ res.previous_posts }}
           </span>
         </span>
@@ -14,7 +14,7 @@
     <span>
       <a href="{{ paginator.next }}">
         <span class="inline-flex rounded-md shadow-sm">
-          <span class="inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-blue active:bg-blue-700 transition ease-in-out duration-150">
+          <span class="inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-black bg-green0 hover:bg-green1 focus:outline-none focus:border-indigo-700 focus:shadow-outline-blue active:bg-green1 transition ease-in-out duration-150">
            {{ res.next_posts }}
           </span>
         </span>
