--- a/themes/zolarwind/templates/base.html
+++ b/themes/zolarwind/templates/base.html
@@ -39,6 +39,8 @@
     <script defer src="/js/diagram/mermaid.min.js" integrity="sha384-6YRSKOSMk3x6Bn7ihZ903Mt9EwSxoy5KrU1CkzT3d+j0C/qKp0DFgG4lKsnqH1Nm"></script>
     <script defer src="/js/diagram/mermaid-config.js" integrity="sha384-a2dvU77ShDwnty4gFDSjoOf0XwhvkFWC40MdpQWNfbFljoJNaGFYCpamXrQqClO1"></script>
   {% endif %}
+  <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/styles/custom.css">
 </head>
 <body>
   {% include "partials/header.html" %}
@@ -46,5 +48,6 @@
     {% block content %}{% endblock content %}
   </div>
   {% include "partials/footer.html" %}
+  <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
 </body>
 </html>
