homepage link to inceput

--- a/themes/zolarwind/templates/index.html
+++ b/themes/zolarwind/templates/index.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% include "partials/banner.html" %}
+
+<!-- {% include "partials/banner.html" %} -->
+
+<div class="flex justify-center pt-8">
+Dacă vrei să pornești de la început, 
+călătoria începe&nbsp;<a href="/blog/ziua-0/">aici</a>.
+</div>
+
 {% include "partials/list.html" %}
 {% endblock %}
