--- a/themes/zolarwind/templates/blog.html
+++ b/themes/zolarwind/templates/blog.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<div class="flex justify-center pt-8">
+    Dacă vrei să pornești de la început, 
+    călătoria începe&nbsp;<a href="/blog/ziua-0/">aici</a>.
+</div>
+
 {% include "partials/list.html" %}
 {% endblock %}
